# ly-automate-teacher-timetable

./: .gitignore  README.md  docker-compose.yml  package.json
backend/: Dockerfile  README.md  package.json
backend/src/: app.js  db.js  server.js
backend/src/models/: Teacher.js  Tenant.js  Timetable.js
backend/src/routes/: tenant.js  timetable.js
backend/src/services/: imageProcessor.js  ocrService.js  tableDetector.js  timetableParser.js
backend/src/utils/: textOrientation.js  timeCalculator.js
backend/tests/: flow.http  timeCalculator.test.js
frontend/: Dockerfile  README.md  index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.jsx
frontend/src/components/: ImageUpload.jsx  TeacherForm.jsx  TeacherList.jsx  TenantSelector.jsx  TimetableDisplay.jsx  TimetableEditor.jsx
ocr-service/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
